--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Folio - Personal Portfolio Template</title>
+  <title>The_Dark_N1ght‘s First page</title>
   <meta content="" name="keywords">
   <meta content="" name="description">
 
@@ -104,8 +104,8 @@
         <div class="col-lg-7">
           <div class="about-descr">
 
-            <p class="p-heading">im a ux /ui designer austin based who loves clean, simple & unique design. i also enjoy crafting brand identities, icons, & ilustration work. </p>
-            <p class="separator">To an English person, it will seem like simplified English, as a skeptical Cambridge friend of mine told me what Occidental is. The European languages are members of the same family.English person.</p>
+            <p class="p-heading">仙女姐姐真漂亮仙女姐姐真漂亮仙女姐姐真漂亮仙女姐姐真漂亮仙女姐姐真漂亮仙女姐姐真漂亮仙女姐姐真漂亮仙女姐姐真漂亮仙女姐姐真漂亮仙女姐姐真漂亮</p>
+            <p class="separator">仙女姐姐真漂亮仙女姐姐真漂亮仙女姐姐真漂亮仙女姐姐真漂亮仙女姐姐真漂亮仙女姐姐真漂亮仙女姐姐真漂亮.</p>
 
           </div>
 
