部分内容翻译成了中文

--- a/blog-single.html
+++ b/blog-single.html
@@ -56,11 +56,17 @@
         <div class="responsive"><i data-icon="m" class="ion-navicon-round"></i></div>
 
         <ul class="nav-menu list-unstyled">
-          <li><a href="#homee" class="smoothScroll">Home</a></li>
+          <!-- <li><a href="#homee" class="smoothScroll">Home</a></li>
           <li><a href="#about" class="smoothScroll">About</a></li>
           <li><a href="#portfolio" class="smoothScroll">Portfolio</a></li>
           <li><a href="#blog" class="smoothScroll">Blog</a></li>
-          <li><a href="#contact" class="smoothScroll">Contact</a></li>
+          <li><a href="#contact" class="smoothScroll">Contact</a></li> -->
+
+          <li><a href="#homee" class="smoothScroll">主页</a></li>
+          <li><a href="#about" class="smoothScroll">关于</a></li>
+          <li><a href="#portfolio" class="smoothScroll">作品集</a></li>
+          <li><a href="#blog" class="smoothScroll">日志博客</a></li>
+          <li><a href="#contact" class="smoothScroll">联系</a></li>
         </ul>
       </div>
     </div>
