--- a/index.html
+++ b/index.html
@@ -53,11 +53,18 @@
         <div class="responsive"><i data-icon="m" class="ion-navicon-round"></i></div>
 
         <ul class="nav-menu list-unstyled">
-          <li><a href="#header" class="smoothScroll">Home</a></li>
+          <!-- <li><a href="#header" class="smoothScroll">Home</a></li>
           <li><a href="#about" class="smoothScroll">About</a></li>
           <li><a href="#portfolio" class="smoothScroll">Portfolio</a></li>
           <li><a href="#journal" class="smoothScroll">Blog</a></li>
-          <li><a href="#contact" class="smoothScroll">Contact</a></li>
+          <li><a href="#contact" class="smoothScroll">Contact</a></li> -->
+
+
+          <li><a href="#homee" class="smoothScroll">主页</a></li>
+          <li><a href="#about" class="smoothScroll">关于</a></li>
+          <li><a href="#portfolio" class="smoothScroll">作品集</a></li>
+          <li><a href="#blog" class="smoothScroll">日志博客</a></li>
+          <li><a href="#contact" class="smoothScroll">联系</a></li>
         </ul>
 
       </div>
@@ -72,7 +79,7 @@
     <div class="container">
       <div class="header-content">
         <h1>I'm <span class="typed"></span></h1>
-        <p>designer, developeur, photographer</p>
+        <p>WEB , JAVASCRIPT , VUE</p>
 
         <ul class="list-unstyled list-social">
           <li><a href="#"><i class="ion-social-facebook"></i></a></li>
@@ -183,7 +190,7 @@
 
     <div class="container">
       <div class="section-title text-center">
-        <h2>My Portfolio</h2>
+        <h2>我的作品集</h2>
       </div>
     </div>
 
@@ -194,7 +201,7 @@
           <div class="portfolio-list">
 
             <ul class="nav list-unstyled" id="portfolio-flters">
-              <li class="filter filter-active" data-filter=".all">all</li>
+              <li class="filter filter-active" data-filter=".all">所有</li>
               <li class="filter" data-filter=".branding">branding</li>
               <li class="filter" data-filter=".mockups">mockups</li>
               <li class="filter" data-filter=".uikits">ui kits</li>
@@ -256,7 +263,7 @@
 
     <div class="container">
       <div class="section-title text-center">
-        <h2>journal</h2>
+        <h2>日志</h2>
       </div>
     </div>
 
@@ -329,13 +336,12 @@
           <div class="col-lg-6">
             <div class="contact-contact">
 
-              <h2 class="mb-30">GET IN TOUCH</h2>
+              <h2 class="mb-30">给我您的意见或者建议</h2>
 
               <ul class="contact-details">
-                <li><span>23 Main, Street</span></li>
-                <li><span>New York, United States</span></li>
-                <li><span>+88 01912704287</span></li>
-                <li><span>example@example.com</span></li>
+                <li><span>广东  深圳</span></li>
+                <li><span>Q 1132962475</span></li>
+                <li><span>1132962475@qq.com</span></li>
               </ul>
 
             </div>
@@ -350,34 +356,34 @@
 
                 <div class="col-lg-6">
                   <div class="form-group contact-block1">
-                    <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
+                    <input type="text" name="name" class="form-control" id="name" placeholder="你的称呼" data-rule="minlen:4" data-msg="请至少输入4个字符" />
                     <div class="validation"></div>
                   </div>
                 </div>
 
                 <div class="col-lg-6">
                   <div class="form-group">
-                    <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" data-rule="email" data-msg="Please enter a valid email" />
+                    <input type="email" class="form-control" name="email" id="email" placeholder="你的邮箱" data-rule="email" data-msg="请输入正确的邮箱地址" />
                     <div class="validation"></div>
                   </div>
                 </div>
 
                 <div class="col-lg-12">
                   <div class="form-group">
-                    <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject" />
+                    <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" data-rule="minlen:4" data-msg="请至少输入8个字符的主题" />
                     <div class="validation"></div>
                   </div>
                 </div>
 
                 <div class="col-lg-12">
                   <div class="form-group">
-                    <textarea class="form-control" name="message" rows="12" data-rule="required" data-msg="Please write something for us" placeholder="Message"></textarea>
+                    <textarea class="form-control" name="message" rows="12" data-rule="required" data-msg="请给我们写点东西吧~" placeholder="Message"></textarea>
                     <div class="validation"></div>
                   </div>
                 </div>
 
                 <div class="col-lg-12">
-                  <input type="submit" class="btn btn-defeault btn-send" value="Send message">
+                  <input type="submit" class="btn btn-defeault btn-send" value="点击发送给我们">
                 </div>
 
               </div>
@@ -406,12 +412,12 @@
 
       </div>
 
-      <p>&copy; Copyrights Folio. All rights reserved.</p>
+      <p>&copy; Copyrights Dark_N1ght. All rights reserved.</p>
 
-      <div class="credits">
+      <!-- <div class="credits">
        
         Designed by BootstrapMade.More Templates <a href="http://www.cssmoban.com/" target="_blank" title="模板之家">模板之家</a> - Collect from <a href="http://www.cssmoban.com/" title="网页模板" target="_blank">网页模板</a>
-      </div>
+      </div> -->
 
     </div>
   </div>
